syntax="proto3";

option go_package = "/FishingValleyProto";

// 验证登录信息 1
message ConfirmLogin{
  string key = 1; //由登录服务器传递的登录凭证
}

// 验证登录信息的回复 1
message ConfirmLoginResponse{
  bool success = 1;
  uint32 id = 2;
  string content = 3;
}

// 客户端准备完毕 2
message UserReady{

}

// 用户移动 3
message Movement{
  uint32 uid = 1;
  int32 x = 2;
  int32 y = 3;
}

// 用户离开游戏 4
message PlayerLeave{
  uint32 uid = 1;
}

// 玩家区块改变 5
message PlayerChunkChange{
  uint32 chunk_x = 1;
  uint32 chunk_y = 2;
}

// 服务器传送玩家(用于传送等) 6
message TransmitPlayer{
  uint32 area_id = 1; // 传送的区域id
  int32 x = 2;
  int32 y = 3;
}

// 信息请求
// 请求一个用户的名字 10
message PlayerNameReq{
  uint32 uid = 1;
}

// 请求用户名字的回应 10
message PlayerNameRsp{
  uint32 uid = 1;
  string name = 2;
}